--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fileup-redux",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Redux adapter to fileup-core",
   "main": "lib/index.js",
   "repository": {
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/ExtPoint/fileup-redux",
   "dependencies": {
     "fileup-core": "^1.0.8",
+    "prop-types": "^15.5.8",
     "react": "*",
     "react-redux": "*"
   },
